# qwen

./: .gitignore  CLAUDE.md  README.md  create_startup_shortcut.ps1  discord_analyze.bat  pyproject.toml  test_alpaca.py  wheel_analyze.bat  wheel_config.yaml
docs/: Next_Steps.md
docs/plans/: 2026-01-15-dashboard-minimal-fast-design.md
notebooks/: exploration.ipynb  income_strategy.ipynb  ssys_wheel_strategy.ipynb  watchlist_2026.ipynb
qwen/: __init__.py  config.py  dashboard.py  dashboard_core.py  dashboard_pro.py  opportunity.py  types.py  watchlist.py
qwen/backtest/: __init__.py  engine.py  metrics.py  portfolio.py  strategy.py
qwen/broker/: __init__.py  alpaca_broker.py  alpaca_options.py  base.py  factory.py
qwen/data/: __init__.py  alpaca.py  base.py  factory.py  schwab.py  watchlist.py  yahoo.py
qwen/gui/: __init__.py  theme.py  watchlist_monitor.py
qwen/live/: __init__.py  runner.py
qwen/paper/: __init__.py  account.py  broker.py
qwen/portfolio/: __init__.py  allocator.py  base.py  tracker.py
qwen/pricing/: __init__.py  binomial.py  black_scholes.py  monte_carlo.py
qwen/screener/: __init__.py  mispricing.py  opportunity.py  volatility.py
qwen/ui/: __init__.py  dashboard.py
qwen/utils/: __init__.py  helpers.py
qwen/wheel/: __init__.py  cli.py  config.py  discord_bot.py  discord_reports.py  engine.py  notifications.py  scheduler.py  state.py  strike_selector.py
research/aerospace/: RKLB.md
strategies/: example_covered_call.py  geopolitical_scenarios.py  options_strategies.py
tests/: test_dashboard_core.py  test_pricing.py
(+36 files in other folders)
